kubernetes-networks/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec: 
  replicas: 3
  selector:
    matchLabels: 
      app: web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 100%
      maxSurge: 100%
  template: 
    metadata:
      name: web
      labels:
        app: web
    spec:
      volumes:
        - name: app
          emptyDir: {}
      containers:
        - name: web
          image: proreg92/otus_task1:1.0
          volumeMounts: 
            - name: app
              mountPath: /app
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
          livenessProbe:
            tcpSocket: { port: 8000 }
