kubernetes-networks/web-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web
  labels:
    app: web
spec:
  volumes:
    - name: app
      emptyDir: {}
  containers:
    - name: web
      image: proreg92/otus_task1:1.0
      volumeMounts: 
        - name: app
          mountPath: /app
      readinessProbe:
        httpGet:
          path: /index.html
          port: 80
      livenessProbe:
        tcpSocket: { port: 8000 }
